--- a/src/app/maps/pages/properties-page/properties-page.component.html
+++ b/src/app/maps/pages/properties-page/properties-page.component.html
@@ -9,16 +9,26 @@
   <div class="col-2"></div>
   <div class="col">
     <div class="row">
-      <!-- Houses -->
-      <div *ngFor="let house of houses" class="col-4 mb-2">
-        <div class="card">
-          <!-- <img src="..." class="card-img-top"> -->
-          <map-mini-map [lngLat]="house.lngLat" />
-          <div class="card-body">
-            <h5 class="card-title">{{ house.title }}</h5>
-            <p class="card-text">{{ house.description }}</p>
+      @for (house of houses; track $index) {
+      <div class="col-4 mb-2">
+          <div class="card">
+            <!-- <img src="..." class="card-img-top"> -->
+            <map-mini-map [lngLat]="house.lngLat" />
+            <div class="card-body">
+              <h5 class="card-title">{{ house.title }}</h5>
+              <p class="card-text">{{ house.description }}</p>
+            </div>
           </div>
         </div>
+      }
+      <div class="col-4 mb-2">
+        <counter-alone [counter]="14"/>
+      </div>
+    </div>
+    <hr>
+    <div class="row">
+      <div class="col">
+        <button class="btn btn-primary">Agregar</button>
       </div>
     </div>
   </div>
